--- a/GitPod/Dockerfile
+++ b/GitPod/Dockerfile
@@ -8,3 +8,4 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 RUN R -e 'install.packages(c("jsonlite", "rlang", "shiny", "leaflet", "dplyr", "sp", "RSQLite", "DBI", "R.utils", "RColorBrewer", "scales", "lattice"))'
+RUN python3 -m pip install dash dash_core_components dash_html_components flask flask_cors pandas pylint
