Add python to gitpod

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,8 +6,14 @@ image:
 tasks:
   - command: >
         R -e "library('shiny'); runApp('./Shiny', port = 8080)"
+  - command: >
+        cd Webapp
+        pip install -r requirements.txt &&
+        python app.py 0.0.0.0:5050
 
 # Expose port 8080 and open preview in sidebar
 ports:
   - port: 8080
+    onOpen: open-preview
+  - port: 5050
     onOpen: open-preview
