--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,8 +8,8 @@ tasks:
         R -e "library('shiny'); runApp('./Shiny', port = 8080)"
   - command: >
         cd Webapp &&
-        pip install -r requirements.txt &&
-        python app.py 0.0.0.0:5050
+        python3 -m pip install -r requirements.txt &&
+        python3 app.py 0.0.0.0:5050
 
 # Expose port 8080 and open preview in sidebar
 ports:
