--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,7 +7,7 @@ tasks:
   - command: >
         R -e "library('shiny'); runApp('./Shiny', port = 8080)"
   - command: >
-        cd Webapp &&
+        cd Python &&
         python3 -m pip install -r requirements.txt &&
         python3 app.py 0.0.0.0:5050
 
